# Role-Based-Rag-Chatbot

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: auth.py  chat.py  create_embeddings.py  roles.py  users.py
app/db/: crud.py  database.py  init_db.py  models.py
app/schemas/: chat.py  role.py  user.py
app/services/rag/: agent.py  embeddings.py
faiss_index/: index.faiss  index.pkl
frontend/: frontend.py  helper.py
temp_sessions/: session_315f6643-2884-4cde-9625-25dbdd831d5b.json
